<resources>
    <string name="app_name">SocialGift</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="social_gift">Social Gift</string>
    <string name="new_in_social_gift">¿New in Social Gift?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">REGISTER</string>
    <string name="create_new_account">Create new account</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="wishlist">List</string>
    <string name="chat">Chat</string>
    <string name="user">User</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="password_min">Password must be at least 6 characters</string>
    <string name="password_confirm">Password and Confirm Password must be equals</string>
    <string name="name_required">Name is required</string>
    <string name="lastname_required">Lastname is required</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="confirm_password_required">Confirm Password is required</string>
    <string name="friends">Friends</string>
    <string name="booking">Booking</string>
    <string name="my_list">My Lists</string>
    <string name="messages">Messages</string>
    <string name="todo">TODO</string>
    <string name="edit_profile">Edit profile</string>
    <string name="desc_toolbar_button">log out icon</string>
    <string name="username">%1$s  %2$s</string>
    <string name="add_list">Add wishlist</string>
    <string name="search_new_friend">Search new friend</string>
    <string name="friends_request">Friends requests</string>
    <string name="desc_image_edit">TODO</string>
    <string name="change_profile_picture">Change profile photo</string>
    <string name="save">Save</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="name_list">Name wishlist</string>
    <string name="description">Description</string>
    <string name="end_date">End date</string>
    <string name="gifts">Gifts</string>
    <string name="add_gift">Add gift</string>
    <string name="list_not_saved_gifts">This wishlist doesn\'t have any saved gifts</string>
    <string name="delete_list">Delete list</string>
    <string name="name_list_required">Name wishlist is required</string>
    <string name="description_required">Description is required</string>
    <string name="end_date_required">End date is required</string>
    <string name="errorDate">The date and time must be current or later than the current one</string>
    <string name="no_lists_created">This user have no wishlists created</string>
    <string name="date_list">%1$s - %2$s</string>
    <string name="booked_gift_list">Booked gifts: %1$d</string>
    <string name="current_password_required">Current password required</string>
    <string name="new_password_required">New password required</string>
    <string name="password_incorrect">Incorrect password</string>
    <string name="password_changed">the user\'s password has been changed</string>
    <string name="error">Error changing password</string>
    <string name="no_friends_request">You don\'t have any friend requests</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="no_friends">You don\'t have friends</string>
    <string name="all_users">All users: </string>
    <string name="delete">Delete</string>
    <string name="gift_id">Gift id: %1$d</string>
    <string name="wishlist_id">Wishlist id: %1$d</string>
    <string name="gift_name">Gift name: %1$s</string>
    <string name="gift_description">Gift description: %1$s</string>
    <string name="booked_gift_wishlist">Booked: %1$s</string>
    <string name="list_friend">Lists: %1$d</string>
    <string name="delete_gift">Delete gift</string>
    <string name="error_get_user_info">Error al cargar la información del usuario</string>
    <string name="list_gift_empty">This wishlist doesn\'t have any gifts</string>
    <string name="gifts_list_friend">Gifts: %1$d</string>
    <string name="gift_booked">Booked</string>
    <string name="reserve">Reserve</string>
    <string name="confirm_reservation">Confirm reservation?</string>
    <string name="confirm_delete_reservation">Confirm delete reservation?</string>
    <string name="reservation_not_belong_you">This reservation does not belong to you</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reservation_deleted">Reservation deleted!</string>
    <string name="reservation_created">Reservation created!</string>
    <string name="user_no_gift_reserved">This user has no gift reserved</string>
    <string name="error_get_reserved_gift">Error getting reserved gifts</string>
    <string name="unbook">Unbook</string>
    <string name="search_gift">Search gift by name or description</string>
    <string name="search_friend">Search friend </string>
    <string name="search_friend_user">Search friend or user</string>
    <string name="create_gift">Create gift</string>
    <string name="error_load_gifts">Error loading gifts</string>
    <string name="id_gift">Gift id: %1$d</string>
    <string name="price_gift">Price: %1$.2f€</string>
    <string name="gift_deleted_list">Gift deleted from wishlist</string>
    <string name="delete_gift_booked">Gift booked from your bookings</string>
    <string name="error_delete_gift">Error deleting gift</string>
    <string name="confirm_delete_friend">Confirm delete this friend</string>
    <string name="friend_deleted">If you change your mind, you will need to resubmit a request to follow: %1$s</string>
    <string name="delete_wishlist">Are you sure you want to delete the list: %1$s</string>
    <string name="wishlist_deleted">Wishlist deleted successfully</string>
    <string name="error_delete_wishlist">A wishlist with gifts cannot be deleted</string>
    <string name="list_created">List created successfully</string>
    <string name="list_updated">List updated successfully</string>
    <string name="error_create_list">Error creating list</string>
    <string name="error_update_list">Error updating list</string>
    <string name="delete_gift_confirmation">Are you sure you want to delete the gift: %1$s</string>
    <string name="wishlist_updated">Wishlist update successfully</string>
    <string name="error_update_wishlist">Error with the wishlist updated</string>
    <string name="no_gift_found">No gift found</string>
    <string name="all_categories">Todos</string>
    <string name="wishlist_created">Wishlist created succesfully</string>
    <string name="error_create_wishlist">Error creating wishlist</string>
    <string name="have_create_wishlist">You have created a wishlist</string>
    <string name="goChat">Go chat</string>
    <string name="send_request">Request sent!</string>
    <string name="error_send_request">You have already sent a request to this user</string>
    <string name="name_gift">Name gift:</string>
    <string name="description_gift">Description: </string>
    <string name="price_gift_mercado_express">Price: </string>
    <string name="link_gift">Link: </string>
    <string name="add_gift_image">Add gift image</string>
    <string name="name_empty">The name of the gift cannot be empty</string>
    <string name="description_empty">The description of the gift cannot be empty</string>
    <string name="link_empty">The link of the gift cannot be empty</string>
    <string name="price_empty">The price of the gift cannot be empty</string>
    <string name="send_message">Send message</string>
</resources>