<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey">

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/social_gift"
        android:textSize="50sp"
        android:textColor="@color/green_hard_whis"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/login">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailText"
            android:background="#30ffffff"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="20dp"
            android:drawableStart="@drawable/ic_person_white_24dp"
            android:drawablePadding="20dp"
            android:maxLength="30"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordText"
            android:background="#30ffffff"
            android:hint="@string/password"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:padding="20dp"
            android:drawableStart="@drawable/ic_info_white_24dp"
            android:drawablePadding="20dp"
            android:inputType="textPassword"
            android:maxLength="20"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:text="@string/login"
            android:backgroundTint="@color/green_hard_whis"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:textSize="15sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_in_social_gift"
            android:textColor="@color/green_hard_whis"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignUpButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_hard_whis"
            android:text="@string/register"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            />


    </LinearLayout>


</LinearLayout>