<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textSize="30sp"
            android:textColor="@color/green_hard_whis"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            />

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nameText"
                android:background="#30ffffff"
                android:hint="@string/name"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:padding="20dp"
                android:drawablePadding="20dp"
                android:inputType="textPersonName"
                android:maxLength="20"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lastnameText"
                android:background="#30ffffff"
                android:hint="@string/lastname"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:padding="20dp"
                android:drawablePadding="20dp"
                android:inputType="textPersonName"
                android:maxLength="20"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailText"
                android:background="#30ffffff"
                android:hint="@string/email"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:padding="20dp"
                android:drawablePadding="20dp"
                android:inputType="textEmailAddress"
                android:maxLength="20"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordText"
                android:background="#30ffffff"
                android:hint="@string/password"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:padding="20dp"
                android:drawablePadding="20dp"
                android:inputType="textPassword"
                android:maxLength="20"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmPasswordText"
                android:background="#30ffffff"
                android:hint="@string/confirm_password"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:padding="20dp"
                android:drawablePadding="20dp"
                android:inputType="textPassword"
                android:maxLength="20"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/registerButton"
                android:text="@string/register"
                android:backgroundTint="@color/green_hard_whis"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="15sp"
                />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>