<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_activity"
    android:orientation="vertical"
    tools:context=".fragments.AddListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/background_fragment"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtNameList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/name_list"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/description"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="100dp"
                android:layout_weight="1"
                android:hint="@string/end_date"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveList"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:background="@drawable/btn_background_save"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_add_gift"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="180dp"
            android:layout_marginBottom="20dp"
            android:text="@string/gifts"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAddGift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"

            android:text="@string/add_gift"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnAddGift"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_gift"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_add_green_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtListNoGifts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/list_not_saved_gifts" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewGiftsWishList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


</LinearLayout>