<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_fragment"
    android:orientation="vertical"
    tools:context=".activities.AddGiftMercadoExpressActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCreateGiftMercadoExpress"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#D1D1D1">

        <ImageButton
            android:id="@+id/btnBackCreateGiftMercadoExpress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc_toolbar_button"
            android:src="@drawable/ic_arrow_back_24" />

        <TextView
            android:id="@+id/toolbar_title_add_list"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:maxLines="2"
            android:text="@string/create_gift"
            android:textColor="@color/green_button_user"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spnCategoryGiftMercadoExpress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/edtNameGiftMercadoExpress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/name_gift"
            android:inputType="text"
            android:maxLength="30"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtDescriptionGiftMercadoExpress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/description_gift"
            android:inputType="text"
            android:lines="2"
            android:maxLength="50"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtLinkGiftMercadoExpress"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/link_gift"
                android:inputType="text"
                android:maxLength="30"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtPriceGiftMercadoExpress"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/price_gift_mercado_express"
                android:inputType="numberDecimal"
                android:maxLength="30"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgGiftMercadoExpress"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_giftcard_green_24" />

        <TextView
            android:id="@+id/txtChangeImageGiftMercadoExpress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_gift_image"
            android:textAlignment="center"
            android:textColor="@color/green_button_user"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSaveGift"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_background_save"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>