<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddListActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddList"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#D1D1D1">

        <ImageButton
            android:id="@+id/toolbar_button_back_add_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc_toolbar_button"
            android:src="@drawable/ic_arrow_back_24" />

        <TextView
            android:id="@+id/toolbar_title_add_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green_button_user"
            android:text="@string/add_list"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDeleteList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:text="@string/delete_list"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/frameAddList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>